[tool.poetry]
name = "cool-stuff"
version = "0.1.0"
description = ""
authors = ["andyatterton <andrew.atterton@ukkidney.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rr-connection-manager = "^0.3.0"
radar-models = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
